[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Gun.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Objects/EnemyBullet.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.98543, 6.95294 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 40.0 ],
"_edit_vertical_guides_": [ 0.0 ]
}
BULLET = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
region_rect = Rect2( 16, 32, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="EdgeDetector" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3.78616, 0.361803 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 20

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -5.29384
margin_top = -11.2648
margin_right = -5.29384
margin_bottom = -11.2648

[node name="PlayerFinder" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFinder"]
shape = SubResource( 2 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Gun" parent="." instance=ExtResource( 5 )]
position = Vector2( 12, 0 )
BULLET = ExtResource( 6 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="PlayerFinder" to="." method="_on_PlayerFinder_body_entered"]
[connection signal="body_exited" from="PlayerFinder" to="." method="_on_PlayerFinder_body_exited"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
